@@ -1,3 +1,11 @@
+2005-05-13  Kristian Høgsberg  <krh@redhat.com>
+
+	* src/cairo-pdf-surface.c: Rename
+	cairo_pdf_surface_create_for_callback() to
+	cairo_pdf_surface_create_for_stream(), and change PDF constructors
+	to take width and height as points and move PPI setting to
+	cairo_pdf_surface_set_ppi()
+
 2005-05-13  Owen Taylor  <otaylor@redhat.com>
 
 	* src/cairo-xlib-surface.c (_cairo_xlib_surface_create_internal): Fix
